CHATS_SIT/force-app/main/default/objects/T_ADJMT_DETAIL__c.object
<CustomObject>
    <description>Detail information about payment corrections</description>
    <fields>
        <fullName>AMT_DETAIL_ADJMT__c</fullName>
        <description>Adjusted Amount (Adjusted Rate Paid minu</description>
        <label>Adjusted Amount (Adjusted Rate Paid minu</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AMT_PAID_RATE_ADJD__c</fullName>
        <description>Adjusted Rate Paid</description>
        <label>Adjusted Rate Paid</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AMT_PAID_RATE_ORIG__c</fullName>
        <description>Amount Paid</description>
        <label>Amount Paid</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDE_STATUS_DETAIL_ADJMT__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00719</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_CARE_LEVEL_ADJD__c</fullName>
        <label>Adjusted Care Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Care_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_UNIT_ADJD__c</fullName>
        <label>Adjusted Unit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00715</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_RATE_ADJD__c</fullName>
        <label>Adjusted Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00751</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_CARE__c</fullName>
        <description>Care Date</description>
        <label>Care Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_ADJMT__c</fullName>
        <description>Adjustment</description>
        <label>Adjustment</label>
        <referenceTo>T_ADJMT__c</referenceTo>
        <relationshipLabel>Adjustment Detail</relationshipLabel>
        <relationshipName>Adjustment3</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IDN_DETAIL_PMT_SUB__c</fullName>
        <label>Sub Payment Detail</label>
        <length>18</length>
        <referenceTo>batchsit_t_sub_pmt_detail__x</referenceTo>
        <relationshipLabel>Adjustment Details</relationshipLabel>
        <relationshipName>Adjustment_Details</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_PROG_FNDG__c</fullName>
        <description>Funding Program</description>
        <label>Funding Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00728</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_OVERRIDE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Override Standard Amount</description>
        <label>Override Standard Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NBR_HOURS_ATNDT_ORIG__c</fullName>
        <label>Attended Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NBR_HOURS_ATTND_ADJD__c</fullName>
        <label>Adjusted Attended Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NBR_HOURS_AUTH_ADJD__c</fullName>
        <label>Adjusted Authorized Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NBR_HOURS_AUTH_ORIG__c</fullName>
        <label>Authorized Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjustment_Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adjustment Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Fee_Paid__c</fullName>
		<label>Registration Fee Paid</label>
		<precision>12</precision>
		<scale>2</scale>
		<type>Number</type>
		</fields>
    <fields>
        <fullName>Activity_Fee_Paid__c</fullName>
		<label>Activity Fee Paid</label>
		<precision>12</precision>
		<scale>2</scale>
		<type>Number</type>
    </fields>
    <fields>
		<fullName>Transportation_Fee_Paid__c</fullName>
		<label>Transportation Fee Paid</label>
		<precision>12</precision>
		<scale>2</scale>
		<type>Number</type>
    </fields>
    <label>Adjustment Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
   <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>